api kontrolü ve yeni eklemeler
