# docs/swagger.json
@@ -50,6 +50,41 @@
                 }
             }
         },
+        "/person_questions": {
+            "get": {
+                "description": "Bireysel test kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Test"
+                ],
+                "summary": "Test",
+                "responses": {
+                    "200": {
+                        "description": "User test successfully",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.QuesInf"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Kayıt kısmı",
@@ -98,6 +133,31 @@
         }
     },
     "definitions": {
+        "controllers.Options": {
+            "type": "object",
+            "properties": {
+                "emission": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.QuesInf": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "options": {
+                    "$ref": "#/definitions/controllers.Options"
+                },
+                "question": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.Response": {
             "type": "object",
             "properties": {
@@ -126,6 +186,9 @@
         "controllers.UserRegister": {
             "type": "object",
             "properties": {
+                "company_name": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
